--- a/blog/templates/blog/comment_delete.html
+++ b/blog/templates/blog/comment_delete.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="row">
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
         <form method="POST">
             {% csrf_token %}
             <p>{{object.name}}:{{object.text}}</p>
@@ -9,7 +9,7 @@
             <button type="submit" class="btn btn-danger">削除</button>
         </form>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-12 mt-4 mt-lg-0">
         {% include "blog/snippets/sidebar.html" %}
     </div>
 </div>
