--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <div class="row">
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
         {% if post %}
         <h1 class="mb-4">コメントを書き込む</h1>
         <h4 class="mb-3">
@@ -21,7 +21,7 @@
             <button type="submit" class="btn btn-primary">送信</button>
         </form>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-12 mt-4 mt-lg-0">
         {% include "blog/snippets/sidebar.html" %}
     </div>
 </div>
