--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,9 +15,18 @@
                     <i class="fa-solid fa-wrench"></i>{{ object.updated_at|date }}
                   </small>
               </p>
-               {% if Post.image %}
-                    <img src="{{ Post.image.url }}" alt="{{ Post.title }}" width="100" height="450">
+              <div>
+               {% if object.image %}
+                 <img src="{{ object.image.url }}" alt="{{ object.title }}" class="img-fluid" style="max-height:250px; object-fit:cover;">
+                 {% else %}
+                    <svg class="bd-placeholder-img img-fluid" style="max-height:250px;" xmlns="http://www.w3.org/2000/svg"
+                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                    focusable="false">
+                    <rect width="100%" height="100%" fill="#55595c" />
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                     </svg>
                  {% endif %}
+                 </div>
               <div class="mt-4 mb-4">{{ object.convert_markdown_to_html|safe}}
               </div>
               <p>
